Fixing toggles on mobile not being clickable with cursor pointer ref: #14

--- a/src/scss/utility/_toggle.scss
+++ b/src/scss/utility/_toggle.scss
@@ -5,8 +5,17 @@
 .u-toggle,
 %u-toggle {
     display: none;
-    
+
     &.is-active {
         display: block;
     }
+}
+
+
+// =============================================
+// Add cursor on toggles for mobile
+// =============================================
+
+[data-cc-action] {
+    cursor: pointer;
 }
